<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ScriptureListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            tools:ignore="InconsistentLayout" />

        <include layout="@layout/scripture_list" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="48dp"
        android:textColor="@color/white"
        android:tint="@color/white"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/Add"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_invisible"
        android:layout_width="@dimen/fab_margin"
        android:layout_height="@dimen/fab_margin"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="invisible"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="top"
        android:contentDescription="@string/hidden"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:tint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        android:scaleType="center"
        android:layout_gravity="top|end"
        app:layout_anchor="@+id/fab_invisible"
        app:layout_anchorGravity="top"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/review"/>

</android.support.design.widget.CoordinatorLayout>