<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ReviewScriptureActivity"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/darker_gray">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_endReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:padding="@dimen/square_button_padding"
            android:onClick="finish"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/btn_addScriptures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_scriptures"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:padding="@dimen/square_button_padding"
            android:visibility="gone"
            android:onClick="addscripture"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_notice"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_margin="4dp"
                android:id="@+id/tv_msg"
                android:textColor="@color/white"/>
        </LinearLayout>

    </FrameLayout>



    <com.mindorks.placeholderview.SwipePlaceHolderView
        android:id="@+id/swipeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</FrameLayout>
